@@ -52,20 +52,20 @@
 
    /* Macros: */
 		/** MIDI command for a note on (activation) event */
-		#define MIDI_COMMAND_NOTE_ON         0x09
+		#define MIDI_COMMAND_NOTE_ON      0x90
 
 		/** MIDI command for a note off (deactivation) event */
-		#define MIDI_COMMAND_NOTE_OFF        0x08
+		#define MIDI_COMMAND_NOTE_OFF     0x80
 
 		/** Standard key press velocity value used for all note events, as no pressure sensor is mounted */
-		#define MIDI_STANDARD_VELOCITY       64
+		#define MIDI_STANDARD_VELOCITY    64
 		
 		/** Convenience macro. MIDI channels are numbered from 1-10 (natural numbers) however the logical channel
 		 *  addresses are zero-indexed. This converts a natural MIDI channel number into the logical channel address.
 		 *
 		 *  \param channel  MIDI channel number to address
 		 */
-		#define MIDI_CHANNEL(channel)        (channel - 1)
+		#define MIDI_CHANNEL(channel)     (channel - 1)
 
 		/** LED mask for the library LED driver, to indicate that the USB interface is not ready. */
 		#define LEDMASK_USB_NOTREADY      LEDS_LED1
